# tori-rs

./: .justfile  Cargo.toml  README.md  deny.toml
containers/: Containerfile.test  Containerfile.test-clean  build-run.sh  build.sh  run.sh  test-clean.sh  test.sh
proptest-regressions/: conf.txt  state.txt
proptest-regressions/os/: debian.txt
rust/: Cargo.toml  README.md  black-box.sh
rust/src/: conf.rs  log.rs  main.rs  run.rs
src/: conf.rs  dev.rs  lib.rs  log.rs  main.rs  os.rs  run.rs  state.rs
src/dev/: log.rs  test.rs
src/os/: debian.rs  pkg.rs
src/run/: executor.rs  expeditor.rs  teller.rs
src/run/executor/: meta.rs
supply-chain/: audits.toml  config.toml
